# demo-fastapi-swagger

./: Dockerfile  README.md  appspec.yml  pyproject.toml  startApp.sh
fastapi_calc_app/: main.py
scripts/: start_container.sh  stop_container.sh
